Fix button color on mobile checkout page

--- a/src/routes/cart/cart.scss
+++ b/src/routes/cart/cart.scss
@@ -24,6 +24,7 @@
         font-size: 0.6rem;
         font-weight: 100;
         letter-spacing: 0.15rem;
+        color: black;
         cursor: pointer;
       }
 
